Added some changes to the plot functions.

--- a/CFA_and_binning_forward_models.ipynb
+++ b/CFA_and_binning_forward_models.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,24 +24,31 @@
     "from netCDF4 import Dataset\n",
     "\n",
     "\n",
-    "def plot_images(images_list, titles_list):\n",
+    "def plot_images(images_list, titles_list, nrows=1, ncols=None, save_to=None, police_color=None):\n",
     "    n = len(images_list)\n",
+    "    if not ncols:\n",
+    "        ncols = n\n",
+    "\n",
+    "    if not police_color:\n",
+    "        police_color = \"white\"\n",
+    "    \n",
     "    plt.figure(figsize=(40, 40))\n",
     "\n",
     "    for i in range(n):\n",
     "        if len(images_list[i].shape) == 3 and images_list[i].shape[2] == 3:\n",
-    "            plt.subplot(1, n, i + 1)\n",
+    "            plt.subplot(nrows, ncols, i + 1)\n",
     "            plt.imshow(np.flip(images_list[i], axis=2))\n",
-    "            plt.title(titles_list[i], color=\"white\", fontsize=32)\n",
-    "            plt.xticks(color=\"white\", fontsize=24)\n",
-    "            plt.yticks(color=\"white\", fontsize=24)\n",
     "        \n",
     "        else:\n",
-    "            plt.subplot(1, n, i + 1)\n",
+    "            plt.subplot(nrows, ncols, i + 1)\n",
     "            plt.imshow(images_list[i], cmap='gray')\n",
-    "            plt.title(titles_list[i], color=\"white\", fontsize=32)\n",
-    "            plt.xticks(color=\"white\", fontsize=24)\n",
-    "            plt.yticks(color=\"white\", fontsize=24)\n",
+    "        \n",
+    "        plt.title(titles_list[i], color=police_color, fontsize=32)\n",
+    "        plt.xticks(color=police_color, fontsize=24)\n",
+    "        plt.yticks(color=police_color, fontsize=24)\n",
+    "\n",
+    "    if save_to:\n",
+    "        plt.savefig(save_to)\n",
     "\n",
     "    plt.show()"
    ]
@@ -70,13 +77,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "netCDF4_path = path.join(\"data\", \"multispectral_colorchecker.ns\")\n",
-    "\n",
-    "dataset = Dataset(netCDF4_path, 'r')\n",
+    "dataset = Dataset(path.join(\"data\", \"multispectral_colorchecker.ns\"), 'r')\n",
     "dataset.set_auto_mask(False)\n",
     "\n",
     "# Declaration of Ux\n",
@@ -87,7 +92,7 @@
     "    for j in range(10):\n",
     "        Ux_2[i, j] = [np.random.choice([0,1]), np.random.choice([0,1]), np.random.choice([0,1])]\n",
     "\n",
-    "Ux_3 = np.flip(np.asarray(Image.open(\"tarkus.jpg\").resize((100, 100))), axis=2)\n",
+    "Ux_3 = np.flip(np.asarray(Image.open(path.join(\"data\", \"tarkus.jpg\")).resize((100, 100))), axis=2)\n",
     "\n",
     "# Declaration of the spectral stencil\n",
     "spectral_stencil_1 = dataset.variables['spectral stencil'][:]\n",
@@ -159,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -380,40 +385,39 @@
     "        ker_green = np.array([[0, 1, 0], [1, 0, 1], [0, 1, 0]]) / 2\n",
     "\n",
     "    # Reconstruction of the input\n",
-    "    Ux_hat = np.zeros_like(Ux)\n",
+    "    Ux_hat = np.zeros((N_i, N_j, 3), dtype=np.uint8)\n",
     "\n",
     "    for i in range(N_i):\n",
     "        for j in range(N_j):\n",
     "            if pattern == \"Bayer\":\n",
     "                if i % 2 == 0 and j % 2 == 1:\n",
-    "                    Ux_hat[i, j, k_r] = Y[i, j]\n",
+    "                    Ux_hat[i, j, 2] = Y[i, j]\n",
     "\n",
     "                elif (i % 2 == 0 and j % 2 == 0) or (i % 2 == 1 and j % 2 == 1):\n",
-    "                    Ux_hat[i, j, k_g] = Y[i, j]\n",
+    "                    Ux_hat[i, j, 1] = Y[i, j]\n",
     "\n",
     "                elif i % 2 == 1 and j % 2 == 0:\n",
-    "                    Ux_hat[i, j, k_b] = Y[i, j]\n",
+    "                    Ux_hat[i, j, 0] = Y[i, j]\n",
     "\n",
     "            elif pattern == \"Quad-Bayer\":\n",
     "                if i % 4 < 2 and j % 4 >= 2:\n",
-    "                    Ux_hat[i, j, k_r] = Y[i, j]\n",
+    "                    Ux_hat[i, j, 2] = Y[i, j]\n",
     "\n",
     "                elif (i % 4 < 2 and j % 4 < 2) or (i % 4 >= 2 and j % 4 >= 2):\n",
-    "                    Ux_hat[i, j, k_g] = Y[i, j]\n",
+    "                    Ux_hat[i, j, 1] = Y[i, j]\n",
     "\n",
     "                elif i % 4 >= 2 and j % 4 < 2:\n",
-    "                    Ux_hat[i, j, k_b] = Y[i, j]\n",
+    "                    Ux_hat[i, j, 0] = Y[i, j]\n",
     "\n",
-    "    Ux_hat[:, :, k_r] = convolve2d(Ux_hat[:, :, k_r], ker_red_blue, mode=\"same\")\n",
-    "    Ux_hat[:, :, k_g] = convolve2d(Ux_hat[:, :, k_g], ker_green, mode=\"same\")\n",
-    "    Ux_hat[:, :, k_b] = convolve2d(Ux_hat[:, :, k_b], ker_red_blue, mode=\"same\")\n",
+    "    Ux_hat[:, :, 2] = convolve2d(Ux_hat[:, :, 2], ker_red_blue, mode=\"same\")\n",
+    "    Ux_hat[:, :, 1] = convolve2d(Ux_hat[:, :, 1], ker_green, mode=\"same\")\n",
+    "    Ux_hat[:, :, 0] = convolve2d(Ux_hat[:, :, 0], ker_red_blue, mode=\"same\")\n",
     "\n",
     "    return Ux_hat\n",
     "\n",
     "Ux_hat_Bayer = demosaicking(YBayer)\n",
     "Ux_hat_Quad = demosaicking(YQuad, pattern=\"Quad-Bayer\")\n",
     "Ux_hat_bin = demosaicking(Ybin, pattern=\"Quad-Bayer\")\n",
-    "\n",
     "\n",
     "plot_images([Ux, Ux_hat_Bayer, Ux_hat_Quad, Ux_hat_bin], [\"Input image Ux\", \"Reconstructed image Ux_hat_Bayer\", \"Reconstructed image Ux_hat_Quad\", \"Reconstructed image Ux_hat_bin\"])"
    ]
