Added the new filters

--- a/scico_backprojections_comparisons.ipynb
+++ b/scico_backprojections_comparisons.ipynb
@@ -52,8 +52,6 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from scipy.sparse.linalg import splu\n",
-    "\n",
     "from time import perf_counter\n",
     "\n",
     "from src.input_initialization import *\n",
@@ -72,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +78,7 @@
     "\n",
     "CFA = 'sparse_3'\n",
     "BINNING = CFA == 'quad_bayer'\n",
-    "MAX_ITER = 400\n",
+    "MAX_ITER = 200\n",
     "NOISE_LEVEL = 5"
    ]
   },
@@ -94,19 +92,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_name = '01690'\n",
-    "gt, spectral_stencil = initialize_input(INPUT_DIR + input_name + '.png')\n",
+    "# input_name = '01690'\n",
+    "# x, spectral_stencil = initialize_input(INPUT_DIR + input_name + '.png')\n",
     "\n",
-    "cfa_op = cfa_operator(CFA, gt.shape, spectral_stencil)\n",
+    "# cfa_op = cfa_operator(CFA, x.shape, spectral_stencil)\n",
+    "# forward_op = forward_operator([cfa_op])\n",
+    "# mat = forward_op.matrix\n",
+    "# diag_inv = (1 / (mat @ mat.T).diagonal()).reshape(forward_op.output_shape)\n",
+    "\n",
+    "# y = np.clip(forward_op.direct(x) + np.random.normal(0, NOISE_LEVEL / 100, forward_op.output_shape), 0, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INPUT_DIR = 'input/balloons_ms/'\n",
+    "spectral_stencil = np.array([i for i in range(400, 701, 10)])\n",
+    "x = np.empty((512, 512, 31))\n",
+    "\n",
+    "from os import listdir\n",
+    "for i, file in enumerate(listdir(INPUT_DIR)):\n",
+    "    if file.endswith('.png'):\n",
+    "        x[:, :, int(file[-6:-4]) - 1] = initialize_inverse_input(INPUT_DIR + file)\n",
+    "\n",
+    "x /= np.max(x)\n",
+    "\n",
+    "cfa_op = cfa_operator(CFA, x.shape, spectral_stencil, 'WV34bands_Spectral_Responses.npz')\n",
     "forward_op = forward_operator([cfa_op])\n",
     "mat = forward_op.matrix\n",
-    "tmp = splu(mat @ mat.T)\n",
+    "diag_inv = (1 / (mat @ mat.T).diagonal()).reshape(forward_op.output_shape)\n",
     "\n",
-    "acq = np.clip(forward_op.direct(gt) + np.random.normal(0, NOISE_LEVEL / 100, gt.shape[:-1]), 0, 1)"
+    "y = forward_op.direct(x) + np.random.normal(0, NOISE_LEVEL / 100, forward_op.output_shape)"
    ]
   },
   {
@@ -119,17 +142,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def forward_pass(x):\n",
     "    return jnp.array(forward_op.direct(x))\n",
@@ -137,8 +152,9 @@
     "def adjoint_pass(y):\n",
     "    return jnp.array(forward_op.adjoint(y))\n",
     "\n",
-    "A = linop.LinearOperator(input_shape=gt.shape, output_shape=acq.shape, eval_fn=forward_pass, adj_fn=adjoint_pass)\n",
-    "f = loss.SquaredL2Loss(y=jnp.array(acq), A=A)"
+    "A = linop.LinearOperator(input_shape=x.shape, output_shape=y.shape, eval_fn=forward_pass, adj_fn=adjoint_pass)\n",
+    "\n",
+    "f = loss.SquaredL2Loss(y=jnp.array(y), A=A)"
    ]
   },
   {
@@ -151,15 +167,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def adj_forw_pass(x):\n",
     "    return jnp.array(forward_op.adjoint(forward_op.direct(x)))\n",
     "\n",
-    "A = linop.LinearOperator(input_shape=gt.shape, output_shape=gt.shape, eval_fn=adj_forw_pass, adj_fn=adj_forw_pass)\n",
-    "f_adj = loss.SquaredL2Loss(y=jnp.array(forward_op.adjoint(acq)), A=A)"
+    "A_adj = linop.LinearOperator(input_shape=x.shape, output_shape=x.shape, eval_fn=adj_forw_pass, adj_fn=adj_forw_pass)\n",
+    "y_adj = forward_op.adjoint(y)\n",
+    "\n",
+    "f_adj = loss.SquaredL2Loss(y=jnp.array(y_adj), A=A_adj)"
    ]
   },
   {
@@ -172,15 +190,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "def pinv_forw_pass(x):\n",
-    "    return jnp.array(forward_op.adjoint(tmp.solve(np.array(forward_op.direct(x).reshape(-1))).reshape(gt.shape[:-1])))\n",
+    "    return jnp.array(forward_op.adjoint(diag_inv * forward_op.direct(x)))\n",
     "\n",
-    "A = linop.LinearOperator(input_shape=gt.shape, output_shape=gt.shape, eval_fn=pinv_forw_pass, adj_fn=pinv_forw_pass)\n",
-    "f_pinv = loss.SquaredL2Loss(y=jnp.array(forward_op.adjoint(tmp.solve(acq.reshape(-1)).reshape(gt.shape[:-1]))), A=A)"
+    "A_pinv = linop.LinearOperator(input_shape=x.shape, output_shape=x.shape, eval_fn=pinv_forw_pass, adj_fn=pinv_forw_pass)\n",
+    "y_pinv = forward_op.adjoint(diag_inv * y)\n",
+    "\n",
+    "f_pinv = loss.SquaredL2Loss(y=jnp.array(y_pinv), A=A_pinv)"
    ]
   },
   {
@@ -193,14 +213,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "get_sparse_3_mask() missing 1 required positional argument: 'responses_file'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[31], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m baseline_inverse \u001b[39m=\u001b[39m Inverse_problem(CFA, BINNING, \u001b[39m0\u001b[39;49m, x\u001b[39m.\u001b[39;49mshape, spectral_stencil)\n\u001b[1;32m      2\u001b[0m start \u001b[39m=\u001b[39m perf_counter()\n\u001b[1;32m      3\u001b[0m x_baseline \u001b[39m=\u001b[39m jnp\u001b[39m.\u001b[39marray(baseline_inverse(y))\n",
+      "File \u001b[0;32m~/code/internship_superres_img_multires_spectral_sensor/src/inversions/baseline_method/inversion_baseline.py:22\u001b[0m, in \u001b[0;36mInverse_problem.__init__\u001b[0;34m(self, cfa, binning, noise_level, output_size, spectral_stencil)\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcfa_mask \u001b[39m=\u001b[39m get_quad_mask(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39moutput_size, spectral_stencil)\n\u001b[1;32m     21\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcfa \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39msparse_3\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m---> 22\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcfa_mask \u001b[39m=\u001b[39m get_sparse_3_mask(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49moutput_size, spectral_stencil)\n",
+      "\u001b[0;31mTypeError\u001b[0m: get_sparse_3_mask() missing 1 required positional argument: 'responses_file'"
+     ]
+    }
+   ],
+   "source": [
+    "baseline_inverse = Inverse_problem(CFA, BINNING, 0, x.shape, spectral_stencil)\n",
+    "start = perf_counter()\n",
+    "x_baseline = jnp.array(baseline_inverse(y))\n",
+    "mid_1 = perf_counter()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "baseline_inverse = Inverse_problem(CFA, BINNING, 0, gt.shape, spectral_stencil)\n",
-    "start = perf_counter()\n",
-    "x_baseline = jnp.array(baseline_inverse(acq))\n",
-    "mid_1 = perf_counter()"
+    "import optuna\n",
+    "\n",
+    "def objective(trial):\n",
+    "    lambd = trial.suggest_float('lambd', 0, 1)\n",
+    "\n",
+    "    g = functional.L21Norm(l2_axis=(0, 3))\n",
+    "    C = lambd * linop.FiniteDifference(input_shape=x.shape, append=0, axes=(0, 1))\n",
+    "    C_squared_norm = np.float64(linop.operator_norm(C))**2\n",
+    "\n",
+    "    sigma = trial.suggest_int('sigma', 1, 100)\n",
+    "    tmp = trial.suggest_float('tmp', 0, 1)\n",
+    "    tau = tmp / (sigma * C_squared_norm)\n",
+    "\n",
+    "    solver_PDHG_pinv = PDHG(\n",
+    "        f=f_pinv,\n",
+    "        g=g,\n",
+    "        C=C,\n",
+    "        tau=tau,\n",
+    "        sigma=sigma,\n",
+    "        x0=x_baseline,\n",
+    "        maxiter=200\n",
+    "    )\n",
+    "\n",
+    "    return metric.psnr(x, solver_PDHG_pinv.solve())\n",
+    "\n",
+    "study = optuna.create_study(direction='maximize')\n",
+    "study.optimize(objective, n_trials=100, n_jobs=-1)\n",
+    "best_trial = study.best_trial\n",
+    "\n",
+    "for key, value in best_trial.params.items():\n",
+    "    print(key, value)"
    ]
   },
   {
@@ -213,14 +285,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/matthieu/.local/lib/python3.10/site-packages/scico/optimize/_primaldual.py:181: UserWarning: Argument 1 of 1 is an np.ndarray. Will cast it to DeviceArray. To suppress this warning cast all np.ndarrays to DeviceArray first.\n",
+      "  self.x = ensure_on_device(x0)\n"
+     ]
+    }
+   ],
    "source": [
     "lambd = 5e-3\n",
     "\n",
     "g = functional.L21Norm(l2_axis=(0, 3))\n",
-    "C = lambd * linop.FiniteDifference(input_shape=gt.shape, append=0, axes=(0, 1))\n",
+    "C = lambd * linop.FiniteDifference(input_shape=x.shape, append=0, axes=(0, 1))\n",
     "C_squared_norm = np.float64(linop.operator_norm(C))**2\n",
     "\n",
     "sigma = 1e2\n",
@@ -232,7 +313,7 @@
     "    C=C,\n",
     "    tau=tau,\n",
     "    sigma=sigma,\n",
-    "    x0=x_baseline,\n",
+    "    x0=forward_op.adjoint(y),\n",
     "    maxiter=MAX_ITER\n",
     ")"
    ]
@@ -247,14 +328,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "lambd = 5e-3\n",
     "\n",
     "g = functional.L21Norm(l2_axis=(0, 3))\n",
-    "C = lambd * linop.FiniteDifference(input_shape=gt.shape, append=0, axes=(0, 1))\n",
+    "C = lambd * linop.FiniteDifference(input_shape=x.shape, append=0, axes=(0, 1))\n",
     "C_squared_norm = np.float64(linop.operator_norm(C))**2\n",
     "\n",
     "sigma = 1e2\n",
@@ -266,7 +347,7 @@
     "    C=C,\n",
     "    tau=tau,\n",
     "    sigma=sigma,\n",
-    "    x0=x_baseline,\n",
+    "    x0=forward_op.adjoint(y),\n",
     "    maxiter=MAX_ITER\n",
     ")"
    ]
@@ -281,14 +362,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "lambd = 5e-2\n",
     "\n",
     "g = functional.L21Norm(l2_axis=(0, 3))\n",
-    "C = lambd * linop.FiniteDifference(input_shape=gt.shape, append=0, axes=(0, 1))\n",
+    "C = lambd * linop.FiniteDifference(input_shape=x.shape, append=0, axes=(0, 1))\n",
     "C_squared_norm = np.float64(linop.operator_norm(C))**2\n",
     "\n",
     "sigma = 3e1\n",
@@ -300,7 +381,7 @@
     "    C=C,\n",
     "    tau=tau,\n",
     "    sigma=sigma,\n",
-    "    x0=x_baseline,\n",
+    "    x0=forward_op.adjoint(y),\n",
     "    maxiter=MAX_ITER\n",
     ")"
    ]
@@ -322,7 +403,7 @@
     "lambd = 5e-2\n",
     "\n",
     "g = lambd * 6e-2 * functional.BM3D(is_rgb=True)\n",
-    "C = linop.Identity(input_shape=gt.shape)\n",
+    "C = linop.Identity(input_shape=x.shape)\n",
     "\n",
     "rho = 2 * lambd * 10**-1\n",
     "\n",
@@ -354,7 +435,7 @@
     "lambd = 5e-2\n",
     "\n",
     "g = lambd * 6e-2 * functional.BM3D(is_rgb=True)\n",
-    "C = linop.Identity(input_shape=gt.shape)\n",
+    "C = linop.Identity(input_shape=x.shape)\n",
     "\n",
     "rho = 2 * lambd * 10**-1\n",
     "\n",
@@ -386,7 +467,7 @@
     "lambd = 5e-2\n",
     "\n",
     "g = lambd * 6e-2 * functional.BM3D(is_rgb=True)\n",
-    "C = linop.Identity(input_shape=gt.shape)\n",
+    "C = linop.Identity(input_shape=x.shape)\n",
     "\n",
     "rho = 2 * lambd * 10**-1\n",
     "\n",
@@ -411,23 +492,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# mid_2 = perf_counter()\n",
-    "# x_PDHG = solver_PDHG.solve()\n",
-    "# mid_3 = perf_counter()\n",
-    "# x_PDHG_adj = solver_PDHG_adj.solve()\n",
-    "# mid_4 = perf_counter()\n",
-    "# x_PDHG_pinv = solver_PDHG_pinv.solve()\n",
-    "# mid_5 = perf_counter()\n",
+    "mid_2 = perf_counter()\n",
+    "x_PDHG = solver_PDHG.solve()\n",
+    "mid_3 = perf_counter()\n",
+    "x_PDHG_adj = solver_PDHG_adj.solve()\n",
+    "mid_4 = perf_counter()\n",
+    "x_PDHG_pinv = solver_PDHG_pinv.solve()\n",
+    "mid_5 = perf_counter()\n",
     "# x_BM3D = solver_BM3D.solve()\n",
     "# mid_6 = perf_counter()\n",
     "# x_BM3D_adj = solver_BM3D_adj.solve()\n",
-    "mid_7 = perf_counter()\n",
-    "x_BM3D_pinv = solver_BM3D_pinv.solve()\n",
-    "end = perf_counter()"
+    "# mid_7 = perf_counter()\n",
+    "# x_BM3D_pinv = solver_BM3D_pinv.solve()\n",
+    "# end = perf_counter()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20.653252\n",
+      "0.008603494\n",
+      "247.0749602609999\n",
+      "20.651829\n",
+      "0.008606311\n",
+      "401.59159047399953\n",
+      "20.28673\n",
+      "0.009361103\n",
+      "212.626590244\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(metric.psnr(x, np.clip(x_PDHG, 0, 1)))\n",
+    "print(metric.mse(x, np.clip(x_PDHG, 0, 1)))\n",
+    "print(mid_3 - mid_2)\n",
+    "\n",
+    "print(metric.psnr(x, np.clip(x_PDHG_adj, 0, 1)))\n",
+    "print(metric.mse(x, np.clip(x_PDHG_adj, 0, 1)))\n",
+    "print(mid_4 - mid_3)\n",
+    "\n",
+    "print(metric.psnr(x, np.clip(x_PDHG_pinv, 0, 1)))\n",
+    "print(metric.mse(x, np.clip(x_PDHG_pinv, 0, 1)))\n",
+    "print(mid_5 - mid_4)"
    ]
   },
   {
@@ -445,24 +561,24 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(nrows=3, ncols=3, sharex=True, sharey=True, figsize=(20, 20))\n",
-    "ax[0][0].imshow(gt)\n",
+    "ax[0][0].imshow(x)\n",
     "ax[0][0].set_title('Reference', size=20)\n",
-    "ax[0][1].imshow(acq, cmap='gray')\n",
+    "ax[0][1].imshow(y, cmap='gray')\n",
     "ax[0][1].set_title(f'Raw image, noise level: {NOISE_LEVEL}', size=20)\n",
     "ax[0][2].imshow(x_baseline)\n",
-    "ax[0][2].set_title(f'Baseline: {metric.psnr(gt, x_baseline):.2f} (dB), {mid_1 - start:.1f}s', size=20)\n",
-    "# ax[1][0].imshow(x_PDHG)\n",
-    "# ax[1][0].set_title(f'TV: {metric.psnr(gt, x_PDHG):.2f} (dB), {mid_3 - mid_2:.1f}s', size=20)\n",
-    "# ax[1][1].imshow(x_PDHG_adj)\n",
-    "# ax[1][1].set_title(f'TV adj backproj: {metric.psnr(gt, x_PDHG_adj):.2f} (dB), {mid_4 - mid_3:.1f}s', size=20)\n",
-    "# ax[1][2].imshow(x_PDHG_pinv)\n",
-    "# ax[1][2].set_title(f'TV pinv backproj: {metric.psnr(gt, x_PDHG_pinv):.2f} (dB), {mid_5 - mid_4:.1f}s', size=20)\n",
+    "ax[0][2].set_title(f'Baseline: {metric.psnr(x, x_baseline):.2f} (dB), {mid_1 - start:.1f}s', size=20)\n",
+    "ax[1][0].imshow(x_PDHG)\n",
+    "ax[1][0].set_title(f'TV: {metric.psnr(x, x_PDHG):.2f} (dB), {mid_3 - mid_2:.1f}s', size=20)\n",
+    "ax[1][1].imshow(x_PDHG_adj)\n",
+    "ax[1][1].set_title(f'TV adj backproj: {metric.psnr(x, x_PDHG_adj):.2f} (dB), {mid_4 - mid_3:.1f}s', size=20)\n",
+    "ax[1][2].imshow(x_PDHG_pinv)\n",
+    "ax[1][2].set_title(f'TV pinv backproj: {metric.psnr(x, x_PDHG_pinv):.2f} (dB), {mid_5 - mid_4:.1f}s', size=20)\n",
     "# ax[2][0].imshow(x_BM3D)\n",
-    "# ax[2][0].set_title(f'PnP: {metric.psnr(gt, x_BM3D):.2f} (dB), {mid_6 - mid_5:.1f}s', size=20)\n",
+    "# ax[2][0].set_title(f'PnP: {metric.psnr(x, x_BM3D):.2f} (dB), {mid_6 - mid_5:.1f}s', size=20)\n",
     "# ax[2][1].imshow(x_BM3D_adj)\n",
-    "# ax[2][1].set_title(f'PnP adj backproj: {metric.psnr(gt, x_BM3D_adj):.2f} (dB), {mid_7 - mid_6:.1f}s', size=20)\n",
-    "ax[2][2].imshow(x_BM3D_pinv)\n",
-    "ax[2][2].set_title(f'PnP pinv backproj: {metric.psnr(gt, x_BM3D_pinv):.2f} (dB), {end - mid_7:.1f}s', size=20)\n",
+    "# ax[2][1].set_title(f'PnP adj backproj: {metric.psnr(x, x_BM3D_adj):.2f} (dB), {mid_7 - mid_6:.1f}s', size=20)\n",
+    "# ax[2][2].imshow(x_BM3D_pinv)\n",
+    "# ax[2][2].set_title(f'PnP pinv backproj: {metric.psnr(x, x_BM3D_pinv):.2f} (dB), {end - mid_7:.1f}s', size=20)\n",
     "\n",
     "# fig.savefig('backproj_comparisons.png')"
    ]
@@ -482,24 +598,24 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(nrows=3, ncols=3, sharex=True, sharey=True, figsize=(20, 20))\n",
-    "ax[0][0].imshow(gt)\n",
+    "ax[0][0].imshow(x)\n",
     "ax[0][0].set_title('Reference', size=20)\n",
-    "ax[0][1].imshow(acq, cmap='gray')\n",
+    "ax[0][1].imshow(y, cmap='gray')\n",
     "ax[0][1].set_title(f'Raw image, noise level: {NOISE_LEVEL}', size=20)\n",
-    "ax[0][2].imshow(gt -x_baseline)\n",
-    "ax[0][2].set_title(f'Baseline: {metric.psnr(gt, x_baseline):.2f} (dB), {mid_1 - start:.1f}s', size=20)\n",
-    "ax[1][0].imshow(gt -x_PDHG)\n",
-    "ax[1][0].set_title(f'TV: {metric.psnr(gt, x_PDHG):.2f} (dB), {mid_3 - mid_2:.1f}s', size=20)\n",
-    "ax[1][1].imshow(gt -x_PDHG_adj)\n",
-    "ax[1][1].set_title(f'TV adj backproj: {metric.psnr(gt, x_PDHG_adj):.2f} (dB), {mid_4 - mid_3:.1f}s', size=20)\n",
-    "ax[1][2].imshow(gt -x_PDHG_pinv)\n",
-    "ax[1][2].set_title(f'TV pinv backproj: {metric.psnr(gt, x_PDHG_pinv):.2f} (dB), {mid_5 - mid_4:.1f}s', size=20)\n",
-    "# ax[2][0].imshow(gt -x_BM3D)\n",
-    "# ax[2][0].set_title(f'PnP: {metric.psnr(gt, x_BM3D):.2f} (dB), {mid_6 - mid_5:.1f}s', size=20)\n",
-    "# ax[2][1].imshow(gt -x_BM3D_adj)\n",
-    "# ax[2][1].set_title(f'PnP adj backproj: {metric.psnr(gt, x_BM3D_adj):.2f} (dB), {mid_7 - mid_6:.1f}s', size=20)\n",
-    "# ax[2][2].imshow(gt -x_BM3D_pinv)\n",
-    "# ax[2][2].set_title(f'PnP pinv backproj: {metric.psnr(gt, x_BM3D_pinv):.2f} (dB), {end - mid_7:.1f}s', size=20)\n",
+    "ax[0][2].imshow(x -x_baseline)\n",
+    "ax[0][2].set_title(f'Baseline: {metric.psnr(x, x_baseline):.2f} (dB), {mid_1 - start:.1f}s', size=20)\n",
+    "ax[1][0].imshow(x -x_PDHG)\n",
+    "ax[1][0].set_title(f'TV: {metric.psnr(x, x_PDHG):.2f} (dB), {mid_3 - mid_2:.1f}s', size=20)\n",
+    "ax[1][1].imshow(x -x_PDHG_adj)\n",
+    "ax[1][1].set_title(f'TV adj backproj: {metric.psnr(x, x_PDHG_adj):.2f} (dB), {mid_4 - mid_3:.1f}s', size=20)\n",
+    "ax[1][2].imshow(x -x_PDHG_pinv)\n",
+    "ax[1][2].set_title(f'TV pinv backproj: {metric.psnr(x, x_PDHG_pinv):.2f} (dB), {mid_5 - mid_4:.1f}s', size=20)\n",
+    "# ax[2][0].imshow(x -x_BM3D)\n",
+    "# ax[2][0].set_title(f'PnP: {metric.psnr(x, x_BM3D):.2f} (dB), {mid_6 - mid_5:.1f}s', size=20)\n",
+    "# ax[2][1].imshow(x -x_BM3D_adj)\n",
+    "# ax[2][1].set_title(f'PnP adj backproj: {metric.psnr(x, x_BM3D_adj):.2f} (dB), {mid_7 - mid_6:.1f}s', size=20)\n",
+    "# ax[2][2].imshow(x -x_BM3D_pinv)\n",
+    "# ax[2][2].set_title(f'PnP pinv backproj: {metric.psnr(x, x_BM3D_pinv):.2f} (dB), {end - mid_7:.1f}s', size=20)\n",
     "\n",
     "# fig.savefig('backproj_comparisons_errors.png')"
    ]
